--- a/.github/workflows/github-action-go.yml
+++ b/.github/workflows/github-action-go.yml
@@ -18,16 +18,5 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: ./build.sh
+      run: go list -json -deps
       
-    - name: WhiteSource Unified Agent Scan
-      env:
-        WS_APIKEY: ${{secrets.APIKEY}}
-        WS_USERKEY: ${{secrets.USERKEY}}
-        WS_WSS_URL: https://saas.whitesourcesoftware.com/agent
-        WS_PRODUCTNAME: GH_${{github.event.repository.name}}
-        WS_PROJECTNAME: ${{github.ref}}_ghaction
-      run: |
-        curl -LJO https://unified-agent.s3.amazonaws.com/wss-unified-agent.jar
-        echo Unified Agent downloaded successfully
-        java -jar wss-unified-agent.jar
