--- a/.github/workflows/github-action-go.yml
+++ b/.github/workflows/github-action-go.yml
@@ -18,5 +18,7 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: go list -json -deps
+      run: |
+        go list
+        go run main.go
       
