--- a/.github/workflows/github-action-go.yml
+++ b/.github/workflows/github-action-go.yml
@@ -20,5 +20,6 @@ jobs:
     - name: Build
       run: |
         go mod tidy
+        echo "dependency list start"
         go list -mod=mod -deps all
       
