--- a/.github/workflows/github-action-go.yml
+++ b/.github/workflows/github-action-go.yml
@@ -19,6 +19,6 @@ jobs:
 
     - name: Build
       run: |
-        go install github.com/tools/godep@latest
+        sudo apt install -y go-dep
         dep init
       
