--- a/.github/workflows/github-action-go.yml
+++ b/.github/workflows/github-action-go.yml
@@ -19,6 +19,12 @@ jobs:
 
     - name: Build
       run: |
+        echo "GOPATH IS" $GOPATH
+        echo "GOROOT IS " $GOROOT
+        echo "PATH IS" $PATH
+        echo "go env GOPATH"
+        go env GOPATH
+        echo "apt installs"
         sudo apt update
         sudo apt install -y go-dep
         dep init
