--- a/.github/workflows/github-action-go.yml
+++ b/.github/workflows/github-action-go.yml
@@ -12,10 +12,8 @@ jobs:
     steps:
     - name: GoPath setup
       run: |
-        mkdir src
+        mkdir src && cd ./src
     - uses: actions/checkout@v2
-      with:
-        path: src
 
     - name: Set up Go
       uses: actions/setup-go@v2
@@ -30,6 +28,8 @@ jobs:
         echo "PATH IS" $PATH
         echo "go env GOPATH"
         go env GOPATH
+        echo "pwd" 
+        pwd
         echo "apt installs"
         sudo apt update
         sudo apt install -y go-dep
